--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,7 @@ add_subdirectory(lib)
 add_subdirectory(tests)
 
 add_executable(main main.cpp)
-# add_dependencies(main AutLib)
-
+add_dependencies(main AutLib)
 
 target_include_directories(
     main
@@ -20,12 +19,3 @@ target_link_libraries(
     PUBLIC
     AutLib
 )
-
-
-
-# set_target_properties(
-#     main AutLib Tests
-#     PROPERTIES
-#     LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib
-#     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin
-# )
